2008-11-06  Antti Koivisto  <antti@apple.com>

        Eh, this trivial last minute change was wrong.

        * loader/CachedCSSStyleSheet.cpp:
        (WebCore::CachedCSSStyleSheet::sheetText):

2008-11-06  Antti Koivisto  <antti@apple.com>

        Reviewed by Dan Bernstein.

        https://bugs.webkit.org/show_bug.cgi?id=22093
        
        Delaying the text decoding caused regression since the decoding
        also determines the encoding in case of @charset rule. 
        
        Decode immediately in data() and keep the decoded string around
        during the checkNotify().

        * loader/CachedCSSStyleSheet.cpp:
        (WebCore::CachedCSSStyleSheet::sheetText):
        (WebCore::CachedCSSStyleSheet::data):
        * loader/CachedCSSStyleSheet.h:

2008-11-06  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=22097
        Expose MessageEvent constructor on WorkerContext

        * bindings/js/JSWorkerContext.cpp:
        (WebCore::jsWorkerContextMessageEvent):
        (WebCore::setJSWorkerContextMessageEvent):

2008-11-06  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=21107
        <rdar://problem/6264219> New access key combination conflicts with VoiceOver

        * page/EventHandler.h:
        * page/gtk/EventHandlerGtk.cpp:
        (WebCore::EventHandler::accessKeyModifiers):
        * page/qt/EventHandlerQt.cpp:
        (WebCore::EventHandler::accessKeyModifiers):
        * page/win/EventHandlerWin.cpp:
        (WebCore::EventHandler::accessKeyModifiers):
        * page/wx/EventHandlerWx.cpp:
        (WebCore::EventHandler::accessKeyModifiers):
        Access access key modifiers via a function, not a static variable.

        * page/mac/EventHandlerMac.mm: (WebCore::EventHandler::accessKeyModifiers):
        Use Ctrl when VoiceOver is enabled, because a conflict with Emacs-style key bindings is